--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="./vendor/sea.js"></script> 
     <script src="./vendor/seajs-text.js"></script> 
     <script src="./vendor/markdown.js"></script> 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>  
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>  
     <script>
         seajs.use('./main');
     </script>
